# model_handlers/api/report-handler.js
@@ -1,0 +1,51 @@
+'use strict';
+
+const config = require('./../../config');
+const logger = require('./../../utils/logger');
+const errors = require('./../../utils/dz-errors-api');
+const dbConstants = require('./../../constants/db-constants');
+const query = require('./../../utils/query-creator-api');
+let async = require('async');
+let _ = require('underscore');
+const report = require('./../../models/report');
+
+const categoryList = async(req, code) => {
+    return new Promise(async(resolve, reject) => {
+        try {
+            let response = await query.selectWithAnd(dbConstants.dbSchema.report_categories, {}, { _id: 0, title:1, report_category_id:1} );
+            resolve(response);
+            return;
+        } catch (error) {
+            console.log(error)
+            reject(error)
+            return
+        }
+    })
+};
+
+
+const sendReport = async(requestParam) => {
+    return new Promise(async(resolve, reject) => {
+        try {
+            let response = await query.selectWithAndOne(dbConstants.dbSchema.users, {user_id: requestParam.user_id}, { _id: 0, user_id:1} );
+            if(!response){
+                reject(errors.userNotFound(true, requestParam.code));
+                return;
+            }
+            requestParam.report_category_id = requestParam.report_category_id.split(',')
+            await query.insertSingle(dbConstants.dbSchema.reports, requestParam);
+            resolve({});
+            return;
+        } catch (error) {
+            console.log(error)
+            reject(error)
+            return
+        }
+    })
+};
+
+
+module.exports = {
+    categoryList,
+    sendReport
+};
